[package]
name = "edgeclust"
version = "0.0.1"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/edgeclust"
keywords = ["algorithms", "hierarchic-cluser", "online"]
documentation = "https://docs.rs/edgecluster"

edition = "2021"

[dependencies]

ego-tree = { version = "0.9" }
dashmap = { version = "6.1", features = ["rayon"] }

# for //
parking_lot = { version = "0.12" }
rayon = { version = "1.10" }
num_cpus = { version = "1.16" }

cpu-time = { version = "1.0" }

ndarray = { version = ">=0.15, <=0.16", features = ["rayon", "serde"] }


# rand utilis
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
rand_xoshiro = { version = "0.6" }
quantiles = { version = "0.7" }

num-traits = { version = "0.2" }
lazy_static = { version = "1.5" }


# for io
csv = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }

anyhow = { version = "1.0.58" }
katexit = { version = "0.1" }
# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }

[dev-dependencies]

rand_distr = { version = "0.4" }
