[package]
name = "edgecluster"
version = "0.0.1"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/edgeclust"
keywords = ["algorithms", "parallel-cluster"]
documentation = "https://docs.rs/edgecluster"

edition = "2024"

[dependencies]

dashmap = { version = "6.1", features = ["rayon"] }
num-traits = {version = "0.2"}
# for //
parking_lot = { version = "0.12" }
rayon = { version = "1.10" }
portable-atomic = { version = "1", features= ["float"]}
num_cpus = { version = "1.16" }
cpu-time = { version = "1.0" }


# rand utils
rand = { version = "0.9" }
rand_distr = { version = "0.5" }
rand_xoshiro = { version = "0.7" }
quantiles = { version = "0.7" }

indexmap = {version = "2.9", features=["rayon"]}
lazy_static = { version = "1.5" }

ndarray = { version = "0.16", features = ["rayon", "serde"] }
lax = { version = "0.17" }

# for io
csv = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }

anyhow = { version = "1.0" }
katexit = { version = "0.1" }
# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
# log = { version = "0.4" }
env_logger = { version = "0.11" }

# for mnist io
# mnist = { path = "../coreset/mnist"}
# mnist = { git = "https://github.com/jean-pierreBoth/coreset" }

nmi = { version = "0.1"}
# nmi = { git = "https://github.com/jean-pierreBoth/coreset" }
#nmi = { path = "../coreset/nmi"}



[features]

default = ["openblas-system"]
# blas choice
intel-mkl-static = ["ndarray/blas", "lax/intel-mkl-static"]
openblas-static = ["ndarray/blas", "lax/openblas-static"]
openblas-system = ["ndarray/blas", "lax/openblas-system"]


[dev-dependencies]

clap = { version = "4.4", features = ["derive"] }
clustering = { version = "0.2.1", features=["parallel"]}
# clustering = { path = "../clustering"}
# clustering = { git = "https://github.com/jean-pierreBoth/clustering", branch = "jpb" }
